yoshimi 1.5.8 M

2018-7-31 Will
* Implemented filter limits.
* Added MIDI-learn to filter limits.

2018-7-30 Will
* Implemented LFO limits.

2018-7-29 Will
* More work on Limits.
* Converted limits error checks.
* Updated limits doc.
* Improved encoding in UI/MiscGui.cpp
* More work on limits.
* Picked up a few more stragglers.

2018-7-28 Will
* Cleaned up some missing conversions.
  Also corrected previous date!
* More identification of anonymous 255s.
  e.g. NO_MSG, UNUSED, NO_ACTION
* Converted bank controls to enums.
* More missing conversions :(
* Started identifying types and sources.
* Still more missing conversions!
* Rationalised limits in Interface/CmdInterface
* Started converting limits to enums.

2018-7-27 Will
* Converted effect type controls to enums.
  More work needed :(

2018-7-26 Will
* Converted envelope controls to enums.

2018-7-25 Will
* Converted MIDIlearn controls to enums.

2018-7-24 Will
* Revised enum namespace terminology.
  No intrinsic code changes.
* Converted resonance controls to enums.
* Converted LFO controls to enums.
* Converted filter controls to enums.

2018-7-23 Will
* Converted oscillator controls to enums.

2018-7-22 Will
* Converted main addSynth controls to enums.
* Converted addVoice controls to enums.
* BugFix: CLI not setting GUI Bypass GobalFilter.
* Revised build dependencies.

2018-7-21 Will
* Completed scales enum conversion.
* Converted subSynth controls to enums.
* Converted padSynth controls to enums.

2018-7-20 Will
* Completed vector GUI enum updates.
* Updated docs and images.
* BugFix: scales CLI keymap entry wrong controls.
* Started enum conversion of scales.
* BugFix: scales CLI keymap not updating GUI.

2018-7-10 Will
* Corrected GUI Vector/Part/Mixer/Bank anomaly.
  This whole area needs a *major* refactor :(

2018-7-9 Will
* Started conversion of Vectors.

2018-7-5 Will
* Separated common main/part controls.
  Makes enums properly independent.

2018-7-3 Will
* Improved fade/mute/loopback isolation.