@@ -1,5 +1,11 @@
 yoshimi 1.5.8 M
 
+2018-8-1 Will
+* Partly implemented envelope limits.
+  Not defaults.
+* MIDI-learn test now using limits and
+  not the GUI version.
+
 2018-7-31 Will
 * Implemented filter limits.
 * Added MIDI-learn to filter limits.
